@@ -8,22 +8,20 @@ import Game.Moves.MoveTransition;
 import Game.Players.Alliance;
 import Game.Players.Player;
 
+import java.time.Duration;
+import java.time.Instant;
 import java.util.*;
 
 public class AlphaBetaMoveSorted extends Observable implements MoveStrategy {
     private final BoardEvaluator evaluator;
     private final long minSearchTime; // in seconds
     private final MoveSorter moveSorter;
-    private final MoveSorter captureSorter;
     private long totalBoardsEvaluated;
     private long boardsEvaluated;
-    private long executionTime;
-    private long captureChainEvaluationTime;
     private int cutOffsProduced;
     private int transpositionsSkipped;
     private final Map<String, Integer> transpositionTable;
-    private int captureTranspositionsSkipped;
-    private final Map<String, Integer> captureTranspositionTable;
+    private Instant startInstant;
 
     private enum MoveSorter {
 
@@ -87,15 +85,12 @@ public class AlphaBetaMoveSorted extends Observable implements MoveStrategy {
         this.evaluator = StandardBoardEvaluator.get();
         this.minSearchTime = minSearchTime;
         this.moveSorter = MoveSorter.SORT;
-        this.captureSorter = MoveSorter.CAPTURE_SORT;
         this.totalBoardsEvaluated = 0;
         this.boardsEvaluated = 0;
         this.cutOffsProduced = 0;
         this.transpositionsSkipped = 0;
         this.transpositionTable = new HashMap<>();
-        this.captureTranspositionsSkipped = 0;
-        this.captureTranspositionTable = new HashMap<>();
-        this.captureChainEvaluationTime = 0;
+        this.startInstant = null;
     }
 
     @Override
@@ -110,23 +105,24 @@ public class AlphaBetaMoveSorted extends Observable implements MoveStrategy {
 
     @Override
     public Move execute(final Board board) {
-        List<Move> sortedMoves = (List<Move>) this.moveSorter.sort(board, board.currentPlayer().getLegalMoves(), null);
-        final long startTime = System.currentTimeMillis();
+        List<Move> sortedMoves = this.moveSorter.sort(board, board.currentPlayer().getLegalMoves(), null);
+        this.startInstant = Instant.now();
         Move bestMove = getTheOnlyLegalMove(board, sortedMoves);
         if (bestMove != null){
             System.out.println(bestMove + "is the only legal move, play it!");
             return bestMove;
         }
         int depth = 0;
+        Duration duration;
         do {
-            this.captureChainEvaluationTime = 0;
             depth++;
-            System.out.println("INCREASING DEPTH TO " + depth);
-            sortedMoves = (List<Move>) this.moveSorter.sort(board, board.currentPlayer().getLegalMoves(), bestMove);
+            // System.out.println("INCREASING DEPTH TO " + depth);
+            sortedMoves = this.moveSorter.sort(board, board.currentPlayer().getLegalMoves(), bestMove);
             bestMove = findBestMoveAlphaBetaMinMax(board, sortedMoves, depth);
-            this.executionTime = System.currentTimeMillis() - startTime;
-            System.out.println("Current time spent on move: " + executionTime + " ms");
-        } while (this.executionTime + ((long) Math.pow(depth, 3) * sortedMoves.size()) < (this.minSearchTime * 1000));
+            // System.out.println("Current time spent on move: " + executionTime + " ms");
+            Instant endTime = Instant.now();
+            duration = Duration.between(this.startInstant, endTime);
+        } while (duration.toSeconds() < minSearchTime);
         // estimate how long next search is going to take, e.g. depth 7 => 7^3 * 33 = 11319 ms
         return bestMove;
     }
@@ -143,42 +139,43 @@ public class AlphaBetaMoveSorted extends Observable implements MoveStrategy {
         int lowestSeenValue = Integer.MAX_VALUE;
         int currentValue;
         int evaluation = 0;
-        int moveCounter = 1;
+        int moveCounter = 0;
         final int numMoves = sortedMoves.size();
         System.out.println(board.currentPlayer() + " THINKING with depth = " + depth);
-        System.out.println("Previous best move found: " + sortedMoves.get(0).toString());
+        System.out.println("Previous best move found: " + sortedMoves.getFirst().toString());
         // System.out.println("\tOrdered moves! : " + this.moveSorter.sort(board.currentPlayer().getLegalMoves()));
         for (final Move move : sortedMoves) {
+
             final MoveTransition moveTransition = board.currentPlayer().makeMove(move);
             final String s;
             // if (moveTransition.getMoveStatus().isDone()) {  // the move sorter checks if the move is valid
-            final long candidateMoveStartTime = System.nanoTime();
+            final Instant startTime = Instant.now();
             currentValue = alliance.isWhite() ?
-                    min(moveTransition.getToBoard(), depth - 1, highestSeenValue, lowestSeenValue) :
-                    max(moveTransition.getToBoard(), depth - 1, highestSeenValue, lowestSeenValue);
+                    min(moveTransition.getToBoard(), depth, highestSeenValue, lowestSeenValue) :
+                    max(moveTransition.getToBoard(), depth, highestSeenValue, lowestSeenValue);
             if (alliance.isWhite() && currentValue > highestSeenValue) {
                 highestSeenValue = currentValue;
-                evaluation = currentValue;
+                // evaluation = currentValue;
                 bestMove = move;
             }
             else if (alliance.isBlack() && currentValue < lowestSeenValue) {
                 lowestSeenValue = currentValue;
-                evaluation = currentValue;
+                // evaluation = currentValue;
                 bestMove = move;
             }
-            final long candidateMoveDuration = (System.nanoTime() - candidateMoveStartTime) / 1000000;
-
-            System.out.printf("(Depth %d) move: (%d/%d) %s, best: %s [evaluation: %.2f], time: %d ms\n",
-                    depth, moveCounter, numMoves, move, bestMove,
-                    (double) evaluation / 100,
-                    candidateMoveDuration);
+            final Instant endTime = Instant.now();
+            final Duration totalMoveDuration = Duration.between(this.startInstant, endTime);
+            if (totalMoveDuration.toSeconds() > this.minSearchTime){
+                break;
+            }
+            // System.out.printf("(Depth %d) move: (%d/%d) %s, best: %s [evaluation: %.2f], time: %d ms\n", depth, moveCounter, numMoves, move, bestMove, (double) evaluation / 100, moveDuration.toMillis());
             moveCounter++;
         }
-        System.out.printf("%s's BEST MOVE %s [#boards evaluated = %d, time taken = %d ms, eval rate = %.1f cutoffCount = %d transpositions percent = %.2f prune percent = %.2f]\n",
+        System.out.printf("%s's BEST MOVE %s [#boards evaluated = %d, moves at depth %d calculated = (%d / %d), cutoffCount = %d transpositions percent = %.2f prune percent = %.2f]\n",
                 board.currentPlayer(),
-                bestMove, this.boardsEvaluated, this.executionTime,
-                (1000 * ((double)this.boardsEvaluated/this.executionTime)),
-                this.cutOffsProduced, 100 * ((double)this.boardsEvaluated/this.transpositionsSkipped), 100 * ((double)this.cutOffsProduced/this.boardsEvaluated));
+                bestMove, this.boardsEvaluated,
+                depth, moveCounter, numMoves,
+                this.cutOffsProduced, (double)this.transpositionsSkipped/this.boardsEvaluated, 100 * ((double)this.cutOffsProduced/this.boardsEvaluated));
         return bestMove;
     }
 
@@ -201,22 +198,11 @@ public class AlphaBetaMoveSorted extends Observable implements MoveStrategy {
                    final int depth,
                    final int highest,
                    final int lowest) {
-        if (depth == 0 || BoardUtils.INSTANCE.isEndGameScenario(board)) {
+        if (depth == 0 || BoardUtils.isEndGameScenario(board)) {
             final String FEN = FenUtilities.createFENFromGame(board);
             this.boardsEvaluated++;
             this.totalBoardsEvaluated++;
-            if (this.transpositionTable.containsKey(FEN)){
-                // System.out.println("Found a transposition!");
-                this.transpositionsSkipped++;
-                return this.transpositionTable.get(FEN);
-            } else {
-                final int evaluation;
-
-                evaluation = this.evaluator.evaluate(board, depth);
-
-                this.transpositionTable.put(FEN, evaluation);
-                return evaluation;
-            }
+            return transpositionEval(board, depth, FEN);
         }
         int currentHighest = highest;
         for (final Move move : this.moveSorter.sort(board, board.currentPlayer().getLegalMoves(), null)) {
@@ -237,22 +223,11 @@ public class AlphaBetaMoveSorted extends Observable implements MoveStrategy {
                    final int depth,
                    final int highest,
                    final int lowest) {
-        if (depth == 0 || BoardUtils.INSTANCE.isEndGameScenario(board)) {
+        if (depth == 0 || BoardUtils.isEndGameScenario(board)) {
             final String FEN = FenUtilities.createFENFromGame(board);
             this.totalBoardsEvaluated++;
             this.boardsEvaluated++;
-            if (this.transpositionTable.containsKey(FEN)){
-                // System.out.println("Found a transposition!");
-                this.transpositionsSkipped++;
-                return this.transpositionTable.get(FEN);
-            } else {
-                final int evaluation;
-
-                evaluation = this.evaluator.evaluate(board, depth);
-
-                this.transpositionTable.put(FEN, evaluation);
-                return evaluation;
-            }
+            return transpositionEval(board, depth, FEN);
         }
         int currentLowest = lowest;
         for (final Move move : this.moveSorter.sort(board, board.currentPlayer().getLegalMoves(), null)) {
@@ -269,130 +244,25 @@ public class AlphaBetaMoveSorted extends Observable implements MoveStrategy {
         return currentLowest;
     }
 
-    private int resolveCaptureChains(final Board board, final Collection<Move> legalMoves, final int depth) {
-        // check if there are captures in the legal moves, if so start a new search only looking at captures
-        for (final Move move : legalMoves){
-            if (move.isAttackMove()){
-                // start new search here
-                // System.out.println("There are captures in the position, starting new capture chain best move search...");
-                return executeOnlyCaptures(board);
-            }
-        }
-        /*
-        System.out.println("==================================");
-        System.out.println("No captures found in the position!");
-        System.out.println("==================================");
-        */
-        return this.evaluator.evaluate(board, depth);
-    }
+    private int transpositionEval(Board board, int depth, String FEN) {
+        if (this.transpositionTable.containsKey(FEN)){
+            // System.out.println("Found a transposition!");
+            this.transpositionsSkipped++;
+            return this.transpositionTable.get(FEN);
+        } else {
+            final int evaluation;
 
-    private int findBestMoveAlphaBetaMinMaxOnlyCaptures(final Board board, final List<Move> moves, final int maxDepth) {
-        final List<Move> captureMoves = (List<Move>) this.captureSorter.sort(board, moves, null);
-        final Player currentPlayer = board.currentPlayer();
-        final Alliance alliance = currentPlayer.getAlliance();
-        int bestValue = 0;
-        int highestSeenValue = Integer.MIN_VALUE;
-        int lowestSeenValue = Integer.MAX_VALUE;
-        int currentValue;
-        int moveCounter = 1;
-        this.captureTranspositionsSkipped = 0;
-        this.captureTranspositionTable.clear();
-        final int numMoves = captureMoves.size();
-        for (final Move move : captureMoves){
-            final MoveTransition moveTransition = board.currentPlayer().makeMove(move);
-            if (moveTransition.getMoveStatus().isDone()) {
-                currentValue = alliance.isWhite() ?
-                        minCaptures(moveTransition.getToBoard(), maxDepth - 1, highestSeenValue, lowestSeenValue) :
-                        maxCaptures(moveTransition.getToBoard(), maxDepth - 1, highestSeenValue, lowestSeenValue);
-                if (alliance.isWhite() && currentValue > highestSeenValue) {
-                    highestSeenValue = currentValue;
-                    bestValue = currentValue;
-                }
-                else if (alliance.isBlack() && currentValue < lowestSeenValue) {
-                    lowestSeenValue = currentValue;
-                    bestValue = currentValue;
-                }
-                // System.out.println("m: (" + moveCounter + "/" + numMoves + ") " + move + ", best evaluation:  " + bestValue);
-            }
+            evaluation = this.evaluator.evaluate(board, depth);
 
-            moveCounter++;
+            this.transpositionTable.put(FEN, evaluation);
+            return evaluation;
         }
-        return bestValue;
-    }
-
-    private int executeOnlyCaptures(final Board board){
-        int bestEvaluation;
-        int maxDepth = 10;  // capture chains longer than this are very complicated and very rare
-        final long startTime = System.currentTimeMillis();
-        List<Move> sortedMoves = (List<Move>) this.captureSorter.sort(board, board.currentPlayer().getLegalMoves(), null);
-        bestEvaluation = findBestMoveAlphaBetaMinMaxOnlyCaptures(board, sortedMoves, maxDepth);
-        this.captureChainEvaluationTime += System.currentTimeMillis() - startTime;
-        // System.out.println(this.captureTranspositionsSkipped + " transpositions skipped in capture chain");
-        return bestEvaluation;
-    }
-
-    public int maxCaptures(final Board board,
-                           final int depth,
-                           final int highest,
-                           final int lowest) {
-        final List<Move> captureMoves = (List<Move>) this.captureSorter.sort(board, board.currentPlayer().getLegalMoves(), null);
-        if (captureMoves.isEmpty() || BoardUtils.INSTANCE.isEndGameScenario(board) || depth == 0) {
-            final String FEN = FenUtilities.createFENFromGame(board);
-            if (this.captureTranspositionTable.containsKey(FEN)){
-                this.captureTranspositionsSkipped++;
-                return this.captureTranspositionTable.get(FEN);
-            } else {
-                final int evaluation = this.evaluator.evaluate(board, depth);
-                this.captureTranspositionTable.put(FEN, evaluation);
-                return evaluation;
-            }
-        }
-        int currentHighest = highest;
-        for (final Move move : captureMoves) {
-            final MoveTransition moveTransition = board.currentPlayer().makeMove(move);
-            if (moveTransition.getMoveStatus().isDone()) {
-                currentHighest = Math.max(currentHighest, minCaptures(moveTransition.getToBoard(), depth - 1, currentHighest, lowest));
-                if (lowest <= currentHighest) {
-                    break;
-                }
-            }
-        }
-        return currentHighest;
-    }
-
-    public int minCaptures(final Board board,
-                           final int depth,
-                           final int highest,
-                           final int lowest) {
-        final List<Move> captureMoves = (List<Move>) this.captureSorter.sort(board, board.currentPlayer().getLegalMoves(), null);
-        if (captureMoves.isEmpty() || BoardUtils.INSTANCE.isEndGameScenario(board) || depth == 0) {
-            final String FEN = FenUtilities.createFENFromGame(board);
-            if (this.captureTranspositionTable.containsKey(FEN)){
-                this.captureTranspositionsSkipped++;
-                return this.captureTranspositionTable.get(FEN);
-            } else {
-                final int evaluation = this.evaluator.evaluate(board, depth);
-                this.captureTranspositionTable.put(FEN, evaluation);
-                return evaluation;
-            }
-        }
-        int currentLowest = lowest;
-        for (final Move move : captureMoves) {
-            final MoveTransition moveTransition = board.currentPlayer().makeMove(move);
-            if (moveTransition.getMoveStatus().isDone()) {
-                currentLowest = Math.min(currentLowest, maxCaptures(moveTransition.getToBoard(), depth, highest, currentLowest));
-                if (currentLowest <= highest) {
-                    break;
-                }
-            }
-        }
-        return currentLowest;
     }
 
     private int calculateQuiescenceDepth(final Board board,
                                          final Move move,
                                          final int depth) {
+        // TODO: implement this
         return depth - 1;
     }
 }
-
